tests/ui/contracts/requires-bool-expr-with-semicolon.stderr
error[E0308]: mismatched types
  --> $DIR/requires-bool-expr-with-semicolon.rs:9:1
   |
LL | #[requires(true;)]
   | ^^^^^^^^^^^^^^^^^^ expected `bool`, found `()`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
